apathyjade.axum.2bc72b272b56b330649b14ae2743411b0c9c0749
Running as unit: run-p1533839-i14113947.scope; invocation ID: 1f7c209e918d453a87b5a0ec480bdfbd
   Compiling proc-macro2 v1.0.101
   Compiling unicode-ident v1.0.19
   Compiling libc v0.2.175
    Checking cfg-if v1.0.3
   Compiling autocfg v1.5.0
    Checking smallvec v1.15.1
    Checking bytes v1.10.1
    Checking itoa v1.0.15
   Compiling parking_lot_core v0.9.11
    Checking scopeguard v1.2.0
   Compiling find-msvc-tools v0.1.2
   Compiling lock_api v0.4.13
   Compiling shlex v1.3.0
   Compiling cc v1.2.38
    Checking once_cell v1.21.3
    Checking pin-project-lite v0.2.16
    Checking stable_deref_trait v1.2.0
   Compiling serde_core v1.0.228
    Checking log v0.4.28
    Checking futures-core v0.3.31
   Compiling serde v1.0.228
   Compiling quote v1.0.40
   Compiling syn v2.0.106
    Checking fnv v1.0.7
    Checking socket2 v0.6.0
    Checking signal-hook-registry v1.4.6
    Checking parking_lot v0.12.4
    Checking mio v1.0.4
    Checking http v1.3.1
    Checking getrandom v0.2.16
    Checking tracing-core v0.1.34
   Compiling ident_case v1.0.1
   Compiling pkg-config v0.3.32
    Checking tracing v0.1.41
   Compiling vcpkg v0.2.15
    Checking percent-encoding v2.3.2
    Checking litemap v0.8.0
    Checking writeable v0.6.1
   Compiling strsim v0.11.1
    Checking http-body v1.0.1
   Compiling num-traits v0.2.19
   Compiling version_check v0.9.5
   Compiling icu_normalizer_data v2.0.0
   Compiling zerocopy v0.8.27
    Checking subtle v2.6.1
   Compiling typenum v1.18.0
    Checking pin-utils v0.1.0
   Compiling openssl-sys v0.9.109
   Compiling icu_properties_data v2.0.1
   Compiling generic-array v0.14.7
   Compiling ring v0.17.14
   Compiling httparse v1.10.1
    Checking tower-service v0.3.3
    Checking hashbrown v0.15.5
    Checking futures-sink v0.3.31
    Checking ryu v1.0.20
    Checking equivalent v1.0.2
    Checking futures-task v0.3.31
    Checking memchr v2.7.5
    Checking futures-util v0.3.31
    Checking indexmap v2.11.1
    Checking bitflags v2.9.4
    Checking atomic-waker v1.1.2
    Checking slab v0.4.11
    Checking try-lock v0.2.5
    Checking zeroize v1.8.2
   Compiling serde_json v1.0.145
    Checking rustls-pki-types v1.12.0
    Checking want v0.3.1
    Checking form_urlencoded v1.2.2
    Checking futures-channel v0.3.31
    Checking httpdate v1.0.3
   Compiling crossbeam-utils v0.8.21
    Checking foreign-types-shared v0.1.1
   Compiling openssl v0.10.73
    Checking untrusted v0.9.0
    Checking foreign-types v0.3.2
    Checking sync_wrapper v1.0.2
    Checking base64 v0.22.1
    Checking ipnet v2.11.0
   Compiling native-tls v0.2.14
    Checking utf8_iter v1.0.4
    Checking tower-layer v0.3.3
   Compiling rustls v0.23.32
   Compiling synstructure v0.13.2
   Compiling darling_core v0.21.3
    Checking crypto-common v0.1.6
    Checking block-buffer v0.10.4
    Checking http-body-util v0.1.3
    Checking rand_core v0.6.4
    Checking openssl-probe v0.1.6
    Checking digest v0.10.7
    Checking crossbeam-epoch v0.9.18
   Compiling darling_core v0.20.11
   Compiling rayon-core v1.13.0
    Checking regex-syntax v0.8.6
    Checking mime v0.3.17
    Checking either v1.15.0
    Checking rustls-webpki v0.103.7
    Checking crossbeam-deque v0.8.6
    Checking webpki-roots v1.0.3
   Compiling proc-macro-error-attr2 v2.0.0
   Compiling zerofrom-derive v0.1.6
   Compiling yoke-derive v0.8.0
   Compiling tokio-macros v2.5.0
   Compiling zerovec-derive v0.11.1
    Checking tokio v1.47.1
   Compiling displaydoc v0.2.5
    Checking zerofrom v0.1.6
    Checking yoke v0.8.0
   Compiling serde_derive v1.0.228
    Checking zerovec v0.11.4
   Compiling zerocopy-derive v0.8.27
    Checking zerotrie v0.2.2
   Compiling openssl-macros v0.1.1
   Compiling darling_macro v0.21.3
   Compiling darling v0.21.3
   Compiling darling_macro v0.20.11
    Checking tinystr v0.8.1
    Checking icu_locale_core v2.0.0
    Checking potential_utf v0.1.3
    Checking icu_collections v2.0.0
    Checking regex-automata v0.4.11
    Checking icu_provider v2.0.0
    Checking icu_normalizer v2.0.0
    Checking icu_properties v2.0.1
   Compiling diesel_derives v2.3.3
    Checking cpufeatures v0.2.17
    Checking iri-string v0.7.8
   Compiling heck v0.5.0
    Checking half v2.7.1
    Checking idna_adapter v1.2.1
    Checking idna v1.1.0
    Checking ppv-lite86 v0.2.21
   Compiling pq-sys v0.7.2
    Checking ciborium-io v0.2.2
    Checking anstyle v1.0.13
    Checking clap_lex v0.7.6
    Checking iana-time-zone v0.1.64
    Checking url v2.5.7
    Checking serde_urlencoded v0.7.1
    Checking plotters-backend v0.3.7
   Compiling thiserror v1.0.69
    Checking tokio-util v0.7.16
    Checking tower v0.5.2
    Checking tokio-rustls v0.26.4
    Checking tokio-native-tls v0.3.1
   Compiling dsl_auto_type v0.2.0
    Checking plotters-svg v0.3.7
    Checking chrono v0.4.42
    Checking clap_builder v4.5.49
    Checking rand_chacha v0.3.1
    Checking tower-http v0.6.6
    Checking h2 v0.4.12
    Checking ciborium-ll v0.2.2
    Checking regex v1.11.3
   Compiling darling v0.20.11
   Compiling proc-macro-error2 v2.0.1
   Compiling thiserror-impl v1.0.69
    Checking itertools v0.13.0
   Compiling diesel_table_macro_syntax v0.3.0
    Checking num-integer v0.1.46
    Checking serde_path_to_error v0.1.20
    Checking scheduled-thread-pool v0.2.7
    Checking encoding_rs v0.8.35
    Checking cast v0.3.0
    Checking base64ct v1.8.0
    Checking same-file v1.0.6
   Compiling validator_derive v0.20.0
    Checking walkdir v2.5.0
    Checking password-hash v0.5.0
    Checking clap v4.5.49
    Checking r2d2 v0.8.10
    Checking num-bigint v0.4.6
    Checking rayon v1.11.0
    Checking criterion-plot v0.6.0
    Checking ciborium v0.2.2
    Checking rand v0.8.5
    Checking plotters v0.3.7
    Checking tinytemplate v1.2.1
    Checking sha2 v0.10.9
    Checking axum-core v0.5.5
    Checking blake2 v0.10.6
    Checking hyper v1.7.0
    Checking combine v4.6.7
   Compiling backend v0.1.0 (/tmp/nix-shell.uUVugk/apathyjade_axum_qpyk5mmp)
    Checking matchit v0.8.4
    Checking anes v0.1.6
    Checking sha1_smol v1.0.1
    Checking byteorder v1.5.0
    Checking hyper-util v0.1.17
    Checking downcast-rs v2.0.2
    Checking oorandom v11.1.5
    Checking criterion v0.7.0
    Checking argon2 v0.5.3
    Checking validator v0.20.0
   Compiling async-trait v0.1.89
    Checking dotenv v0.15.0
    Checking uuid v1.18.1
    Checking hyper-rustls v0.27.7
    Checking hyper-tls v0.6.0
    Checking lazy_static v1.5.0
    Checking reqwest v0.12.24
    Checking diesel v2.3.2
    Checking oauth2 v5.0.0
    Checking axum v0.8.6
    Checking redis v0.32.7
error[E0271]: type mismatch resolving `<DB as TypeMetadata>::MetadataLookup == &mut <DB as TypeMetadata>::MetadataLookup`
   --> /home/adwin/.cargo/registry/src/mirrors.tuna.tsinghua.edu.cn-4dc01642fd091eda/diesel-2.3.2/src/query_builder/ast_pass.rs:228:51
    |
228 |             } => collector.push_bound_value(bind, metadata_lookup)?,
    |                                                   ^^^^^^^^^^^^^^^ types differ

For more information about this error, try `rustc --explain E0271`.
error: could not compile `diesel` (lib) due to 1 previous error
